# ddrawdx

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
ddrawdx/: ddraw.py
docs/: README.md  _config.yml
docs/src/ddrawdx/: ddraw.md  index.md
example/: example.py
src/ddrawdx/: __init__.py  ddraw.py
