[project]
name = "ddrawdx"
version = "0.0.1"
dependencies = [
  "jax",
  "matplotlib",
]
  
authors = [
  { name="Vincent Molin", email="molinv@chalmers.se" },
]
description = "Differentiable drawing primitives in JAX"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/vincentmolin/ddrawdx"